--- a/01-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/01-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -12,12 +12,17 @@
  
     <div class="col-12 col-sm-6">
         <h3>Listado</h3>
-        <ol>
-            <li>Goku</li>
-            <li>Goku</li>
-            <li>Goku</li>
-            <li>Goku</li>
-        </ol>
+        <ul>
+            @for (character of characters(); track character.id; let idx = $index){
+                <li>
+                    <span>{{ idx + 1 }} - {{character.name}}</span>
+                    <strong class="text-danger"> ({{ character.power }})</strong> 
+                </li>  
+            }
+            
+        </ul>
      </div>
 </section>
+
+
 
