--- a/01-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/01-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -3,21 +3,51 @@
  
 <section class="row">
     <div class="col-12 col-sm-6">
-        <h3>Agregar:</h3>
-        <input type="text" class="form-control" placeholder="Nombre" />
-        <input type="number" class="form-control mt-2" placeholder="Poder" />
+        <h3>Agregar: {{ name() }}</h3>
+        <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Nombre" 
+            [value]="name()"
+            (change)="name.set(txtName.value)" 
+            (input)="name.set(txtName.value)" 
+            #txtName
+        />
+
+        <h3>Poder: {{ power()}}</h3>
+        <input 
+            type="number" 
+            class="form-control mt-2" 
+            placeholder="Poder" 
+            [value]="power()"
+            (input)="power.set(+txtPower.value)" 
+            #txtPower
+        />
     
-        <button class="mt-2 btn btn-primary">Agregar</button>
+        <button (click)="addCharacter()" class="mt-2 btn btn-primary">Agregar</button>
     </div>
  
     <div class="col-12 col-sm-6">
-        <h3>Listado</h3>
+        <h3>Listado Fuertes</h3>
         <ul>
             @for (character of characters(); track character.id; let idx = $index){
-                <li>
-                    <span>{{ idx + 1 }} - {{character.name}}</span>
-                    <strong class="text-danger"> ({{ character.power }})</strong> 
-                </li>  
+                
+                @if(character.power > 500){
+                    <li>
+                        <span>{{ idx + 1 }} - {{character.name}}</span>
+                        <strong 
+                        [class.text-danger]="character.power > 9000"
+                        [class.text-primary]="character.power < 9000"
+                        > 
+                        <!--[ngClass]="powerClasses()"-->
+                        ({{ character.power }})</strong
+                        > 
+                    </li> 
+                }  @else {
+                    <li>
+                        <strong>Aqui no vale la pena ver nada</strong>
+                    </li>
+                }
             }
             
         </ul>
