Fin protecto Curso, Inicio Refactoricacion de mi parte

--- a/01-bases/src/app/components/shared/navbar/navbar.component.html
+++ b/01-bases/src/app/components/shared/navbar/navbar.component.html
@@ -38,4 +38,9 @@
     routerLink="/dragonball" 
     routerLinkActive="active"
     >Dragonball</a>
+
+    <a 
+    routerLink="/dragonball-Super" 
+    routerLinkActive="active"
+    >Dragonball Super</a>
 </nav>
